--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "slot-rtp-gacor",
+    "name": "slot-gacor",
     "main": "./lib/slot-rtp-gacor",
     "version": "1.2.0",
     "description": "Atom Plugin to enlarge the active pane, either with a shortcut or with a super handy follow mode. Inspired by Origami for Sublime Text.",
