--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
     "name": "slot-gacor",
     "main": "./lib/slot-rtp-gacor",
-    "version": "1.2.0",
+    "version": "1.4.0",
     "description": "Atom Plugin to enlarge the active pane, either with a shortcut or with a super handy follow mode. Inspired by Origami for Sublime Text.",
     "keywords": [
-      "pane",
+      "slot",
       "focus",
       "origami",
       "zoom",
       "autozoom"
     ],
     "repository": "https://github.com/Athallah181/slot-rtp-gacor/",
-    "license": "MIT",
     "engines": {
-      "atom": ">=1.0.0 <2.0.0"
+      "atom": "2.0.0"
     },
     "dependencies": {}
   }
